# unixnet

./: .gitignore  CMakeLists.txt  README.md  config.h.in
byteorder/: byteorder.c
daytimetcp/: daytimetcpcli.c  daytimetcpsrv.c
daytimetcpcli/: CMakeLists.txt
daytimetcpcli/src/: CMakeLists.txt  daytimetcpcli.c
lib/: CMakeLists.txt  error.c  error.h  str_cli.c  str_echo.c  unp.h  wrapsock.c  wrapsock.h  wrapunix.c  wrapunix.h
stdio/: ferror.c  fgets.c  myfile.txt
tcpcliserv/: tcpcli01.c  tcpcli02.c  tcpserv01.c  tcpserv02.c
